Bug 1686326 - [quirks] Apply line-height quirk code in both quirks and limited-quirks mode in all places.  r=jfkthame

nsLineLayout.cpp now checks:
  CompatibilityMode() != eCompatibility_FullStandards
in all places.

Differential Revision: https://phabricator.services.mozilla.com/D102080